[Deploy]: 更新输出格式

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,10 +5,15 @@ title = 'My New Hugo Site'
 theme="PaperMod"
 
 [params]
-  ShowReadingTime = true
-  ShowPostNavLinks = true
-  ShowBreadCrumbs = true
-  ShowCodeCopyButtons = true
-  ShowShareButtons = true
-  ShowTags = true
-  ShowHomeContent = true
+    ShowReadingTime = true
+    ShowPostNavLinks = true
+    ShowBreadCrumbs = true
+    ShowCodeCopyButtons = true
+    ShowShareButtons = true
+    ShowTags = true
+    ShowHomeContent = true
+[outputs]
+    home = ["HTML", "RSS"]
+    section = ["HTML", "RSS"]
+    taxonomy = ["HTML", "RSS"]
+    taxonomyTerm = ["HTML", "RSS"]
