[Deploy]: Action中Checkout拉取子模块

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+            fetch-depth: 0
+            submodules: true          # ★ 拉取主题子模块
+            submodules: recursive   # 若主题里还有子模块
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
