--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,11 +15,24 @@ jobs:
             fetch-depth: 0
             submodules: recursive   # 若主题里还有子模块
 
+      - name: Setup Go (for Hugo Modules)
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'  # 或最新稳定版本
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.150.0'  # 使用你安装的 Hugo 版本
           extended: true
+      - name: Cache Hugo Modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/hugo
+            resources/_gen
+          key: ${{ runner.os }}-hugo-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-hugo-
 
       - name: Build
         run: hugo --minify
