--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "themes/PaperMod"]
-	path = themes/PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/docsy"]
+	path = themes/docsy
+	url = https://github.com/google/docsy
+[submodule "themes/Font-Awesome"]
+	path = themes/Font-Awesome
+	url = https://github.com/FortAwesome/Font-Awesome
