--- a/hugo.toml
+++ b/hugo.toml
@@ -1,14 +1,13 @@
 baseURL = 'https://alrayqiu.github.io/'
 languageCode = 'zh-cn'
-title = 'Alray Blog'
-
-theme="PaperMod"
+title = 'Alray Doc'
+theme = "docsy"
 
 [params]
-    ShowReadingTime = true
-    ShowPostNavLinks = true
-    ShowBreadCrumbs = true
-    ShowCodeCopyButtons = true
-    ShowShareButtons = true
-    ShowTags = true
-    ShowHomeContent = true
+  description = "这是一个使用 Docsy 构建的 Hugo 文档站"
+  ui.sidebar_menu_compact = true
+  ui.navbar_logo = true
+  ui.footer_about_enable = true
+
+[markup.goldmark.renderer]
+  unsafe = true
