[Deploy]:全部使用hugo mod

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,11 @@
 baseURL = 'https://alrayqiu.github.io/'
 languageCode = 'zh-cn'
 title = 'Alray Doc'
+
+[module]
+  [[module.imports]]
+    path = 'github.com/google/docsy'
+
 theme = "docsy"
 
 [params]
