--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,9 @@ jobs:
             fetch-depth: 0
             submodules: recursive   # 若主题里还有子模块
 
+      - name: Install PostCSS CLI
+        run: npm install postcss postcss-cli autoprefixer
+        
       - name: Setup Go (for Hugo Modules)
         uses: actions/setup-go@v4
         with:
