--- a/hugo.toml
+++ b/hugo.toml
@@ -13,6 +13,7 @@ theme = "docsy"
   ui.sidebar_menu_compact = true
   ui.navbar_logo = true
   ui.footer_about_enable = true
+  ui.showLightDarkModeMenu = true
   
 [params.search]
   enabled = true
