[Content]: 添加上下页面，修复内容被Navbar遮挡

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,8 @@
 baseURL = 'https://alrayqiu.github.io/'
 languageCode = 'zh-cn'
 title = 'Alray Doc'
+sectionPagesMenu = "main"
+
 
 [module]
   [[module.imports]]
