--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,3 @@
-baseURL = 'https://alrayqiu.github.io/'
-languageCode = 'zh-cn'
-title = 'Alray Doc'
-sectionPagesMenu = "main"
-
 
 [module]
   [[module.imports]]
@@ -10,8 +5,19 @@ sectionPagesMenu = "main"
 
 theme = "docsy"
 
+baseURL = 'https://alrayqiu.github.io/'
+languageCode = 'zh-cn'
+title = 'Alray Doc'
+sectionPagesMenu = "main"
+
+
 [params]
   description = "这是一个使用 Docsy 构建的 Hugo 文档站"
+
+[params.taxonomy]
+  taxonomyCloud = ["tags", "categories"]
+  taxonomyCloudTitle = ["标签云", "分类"]
+  taxonomyPageHeader = ["tags", "categories"]
 
 [params.ui]
   sidebar_search_disable = true
