--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 # .devcontainer/Dockerfile
-FROM mcr.microsoft.com/devcontainers/base:ubuntu
+FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
 
 # 安装 Hugo Extended 和 Node.js（使用官方脚本）
 RUN apt-get update && apt-get install -y \
@@ -24,9 +24,16 @@ RUN apt-get update && apt-get install -y \
     && mv hugo /usr/local/bin/hugo \
     && rm hugo.tar.gz
 
+
 # 切换到非 root 用户
 USER vscode
 WORKDIR /workspace
 
+RUN sudo npm install --save-dev autoprefixer \
+    && sudo npm install --save-dev postcss-cli \
+    && sudo npm install -D postcss
+
+
 RUN git config --global user.email "1780284652@qq.com" \
     && git config --global user.name "alray"
+
