--- a/hugo.toml
+++ b/hugo.toml
@@ -11,8 +11,14 @@ sectionPagesMenu = "main"
     path = 'github.com/google/docsy'
 
 theme = "docsy"
+
 [params]
   description = "这是一个使用 Docsy 构建的 Hugo 文档站"
+
+  
+[params.katex]
+  enable = true
+
 
 [params.taxonomy]
   taxonomyCloud = ["tags", "categories"]
@@ -28,11 +34,21 @@ theme = "docsy"
   navbar_logo = true
   footer_about_enable = true
   showLightDarkModeMenu = true
+
 [params.search]
   enabled = true
 
-[markup.goldmark.renderer]
-  unsafe = true
+[markup.goldmark]
+  [markup.goldmark.renderer]
+    unsafe = true
+  [markup.goldmark.extensions]
+    [markup.goldmark.extensions.passthrough]
+      enable = true
+      [markup.goldmark.extensions.passthrough.delimiters]
+        block = [['\[', '\]'], ['$$', '$$']]
+        inline = [['\(', '\)'], ['$', '$']]
 [markup]
   [markup.highlight]
       style = "onedark"
+
+
